<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_events"
        android:layout_width="396dp"
        android:layout_height="112dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_events" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_achivements"
        android:layout_width="396dp"
        android:layout_height="112dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_achivements" />

    <Button
        android:id="@+id/btn_information_center"
        android:layout_width="130dp"
        android:layout_height="120dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="4dp"
        android:text="@string/information_center"
        app:layout_constraintEnd_toStartOf="@+id/btn_our_brand"
        app:layout_constraintStart_toEndOf="@+id/btn_join_us"
        app:layout_constraintTop_toBottomOf="@+id/text_subdivisions" />

    <TextView
        android:id="@+id/text_events"
        android:layout_width="131dp"
        android:layout_height="28dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/events"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/rv_events"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_subdivisions"
        android:layout_width="149dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/subdivisons"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rv_achivements" />

    <Button
        android:id="@+id/btn_our_brand"
        android:layout_width="130dp"
        android:layout_height="120dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:text="@string/our_brand"
        app:layout_constraintEnd_toStartOf="@+id/text_subdivisions"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_subdivisions" />

    <Button
        android:id="@+id/btn_join_us"
        android:layout_width="130dp"
        android:layout_height="120dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="4dp"
        android:text="@string/join_us"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_information_center"
        app:layout_constraintTop_toBottomOf="@+id/text_subdivisions" />

    <TextView
        android:id="@+id/text_achivements"
        android:layout_width="149dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:text="@string/achivements"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rv_events" />


</androidx.constraintlayout.widget.ConstraintLayout>