<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/logo_handball"
        android:layout_width="130dp"
        android:layout_height="155dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/logo_handball"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rounded_icon" />

    <TextView
        android:id="@+id/title_handball"
        android:layout_width="208dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/title_handball"
        app:layout_constraintStart_toEndOf="@+id/logo_handball"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/history_handball"
        android:layout_width="262dp"
        android:layout_height="107dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/histoiry_handball"
        app:layout_constraintStart_toEndOf="@+id/logo_handball"
        app:layout_constraintTop_toBottomOf="@+id/title_handball" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="508dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/national_team_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>